# encrypted-information-retrieval

./: .gitignore  .pre-commit-config.yaml  ANALYSIS.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pom.xml  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-research.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260706_0001_initial_schema.py
benchmarks/reports/: retrieval_100.md  retrieval_1000.md  retrieval_10000.md  retrieval_report_template.md
docs/: ARCHITECTURE.md  COMPLIANCE_NOTES.md  CTO_DEMO_SCRIPT.md  CURRENT_STATUS.md  DECISIONS.md  DOCKER_COMPOSE_SMOKE_TEST.md  GAP_ANALYSIS.md  GITHUB_ISSUES.md  LEAKAGE_AND_ENDPOINTS.md  LLM_SYSTEM_ANALYSIS.md  MVP_COMPLETION_SUMMARY.md  PORTFOLIO_CASE_STUDY.md  PORTFOLIO_EVIDENCE.md  README.md  THREAT_MODEL.md
docs/migration/: OPE_TO_ORE.md
examples/: portfolio_demo.py
src/encrypted_ir/: __init__.py  audit.py  blind_index.py  database.py  deterministic.py  differential_privacy.py  document_service.py  fpe.py  homomorphic.py  key_manager.py  key_rotation.py  kms_provider.py  logging.py  master_key.py  metrics.py  migrations.py  order_preserving.py  ore.py  post_quantum.py  searchable.py  settings.py  storage_backend.py  use_cases.py
src/encrypted_ir/api/: __init__.py  main.py
src/encrypted_ir/api/dependencies/: auth.py  rate_limiter.py
src/encrypted_ir/api/models/: __init__.py  requests.py  responses.py
src/encrypted_ir/api/routes/: admin.py  data.py  documents.py  keys.py  search.py
src/encrypted_ir/tools/: __init__.py  benchmark_retrieval.py  generate_kms_master_key.py
src/main/java/: CustomQueryParser.java  CustomQueryParserPlugin.java
src/main/resources/: es-plugin.properties
src/test/java/: CustomParserPluginTest.java  CustomParserPluginTest2.java
tests/: __init__.py  test_api.py  test_audit.py  test_benchmarks.py  test_blind_index.py  test_deterministic.py  test_differential_privacy.py  test_fpe.py  test_homomorphic.py  test_key_manager.py  test_key_rotation.py  test_kms_provider.py  test_logging.py  test_metrics.py  test_migrations_and_tools.py  test_order_preserving.py  test_ore.py  test_portfolio_demo.py  test_post_quantum.py  test_postgres_integration.py  test_searchable.py  test_security_hardening.py  test_storage_backend.py  test_use_cases.py
